# GeneralsZH-Android

./: CMakeLists.txt  CMakePresets.json
Core/GameEngine/Include/Common/: GameMemory.h
Core/GameEngine/Source/Common/System/: GameMemory.cpp
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Source/OpenALAudioDevice/: OpenALAudioCache.cpp
GeneralsMD/Code/GameEngineDevice/Source/: OpenALAudioManager.cpp
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/GameClient/: W3DDisplay.cpp
GeneralsMD/Code/Main/: SDL3Main.cpp
Patches/: dxvk-android.patch
android/app/: build.gradle
cmake/: android-deps.cmake  dx8.cmake  freetype.cmake  gamespy.cmake  meson-android-aarch64-cross.ini.in  openal.cmake  sdl3.cmake
cmake/triplets/: arm64-android.cmake
